site_maintenance/simple_app_site_maintenance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintenance-page
  namespace: gloo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maintenance-page
  template:
    metadata:
      labels:
        app: maintenance-page
    spec:
      containers:
      - name: maintenance-page
        image: nginx:alpine
        volumeMounts:
        - name: maintenance-page
          mountPath: /usr/share/nginx/html
      volumes:
      - name: maintenance-page
        configMap:
          name: maintenance-page
---
apiVersion: v1
kind: Service
metadata:
  name: maintenance-page
  namespace: gloo-system
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: maintenance-page
