site_maintenance/httproute3.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: maintenance-mode
  namespace: gloo-system
spec:
  parentRefs:
  - name: http
    namespace: gloo-system
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
       - name: maintenance-page
         port: 80
