site_maintenance/httproute4.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: maintenance-mode
  namespace: gloo-system
spec:
  parentRefs:
  - name: http
    namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
#        type: PathPrefix
#        value: "/bar"
    backendRefs:
      - name: maintenance-page
        port: 80
